# pegasus.py

./: .gitignore  README.md  demo_page.html  pyproject.toml  requirements.txt
pegasus/: fetch_page.py  soar.py  wings.py
tests/: test_soar.py
